Your commit wwwwe

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/momo.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/momo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script>
+      if (navigator.userAgent.indexOf('Firefox') !== -1) {
+        document.querySelector('meta[name="theme-color"]').remove();
+        var meta = document.createElement('meta');
+        meta.name = 'theme-color';
+        meta.content = '#000000';
+        document.getElementsByTagName('head')[0].appendChild(meta);
+      }
+    </script>
     <meta
       name="description"
       content="Web site created using create-react-app"
